--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
+# 系统文件
 .DS_Store
+
+# 打包文件
 node_modules/
 unpackage/
 dist/
+package-lock.json
 
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
-.project
+# 编辑器目录和文件
 .idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
+
